--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 # Project settings
 #
 
-group = no.tine.xp.freemarker
-version = 0.1.0
-projectName = lib-freemarker
+group = no.tine.xp
+version = 0.1.1
+projectName = libfreemarker
 appName = no.tine.xp.freemarker
-displayName = lib-freemarker
+displayName = libfreemarker
 xpVersion = 6.7.2
