--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /build/
+
+.DS_Store
+build/
+.gradle/
+*.iws
+*.ids
+*.iml
+*.ipr
+.idea
+.tmp
