--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 
 group = no.tine.xp
 version = 0.1.2
-projectName = libfreemarker
+projectName = xp-lib-libfreemarker
 appName = no.tine.xp.freemarker
-displayName = libfreemarker
+displayName = xp-lib-libfreemarker
 xpVersion = 6.7.3
