--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@
 #
 
 group = no.tine.xp
-version = 0.1.2
-projectName = xp-lib-libfreemarker
+version = 0.1.6
+projectName = xp-lib-freemarker
 appName = no.tine.xp.freemarker
-displayName = xp-lib-libfreemarker
+displayName = xp-lib-freemarker
 xpVersion = 6.7.3
