--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,11 @@
 # Project settings
 #
 
-group = no.tine.xp
-version = 1.1.1
-projectName = xp-lib-freemarker
 appName = no.tine.xp.freemarker
 displayName = xp-lib-freemarker
+group = no.tine.xp
+projectName = xp-lib-freemarker
+vendorName = TINE
+vendorUrl = https://www.tine.no
+version = 1.1.1
 xpVersion = 6.12.3
