--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,5 @@ projectName = xp-lib-freemarker
 vendorName = TINE
 vendorUrl = https://www.tine.no
 version = 1.1.1
+jarVersion = 1.1.1
 xpVersion = 6.12.3
