--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'maven-publish'
-  id "com.enonic.xp.app" version "1.0.13"
+  id "com.enonic.xp.app" version "1.0.17"
 }
 
 compileJava.options.encoding = "UTF-8"
@@ -14,6 +14,7 @@ app {
 	displayName = project.displayName
 	vendorName = project.vendorName
 	vendorUrl = project.vendorUrl
+	systemVersion = xpVersion
 }
 
 dependencies {
