--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+  branches:
+    include:
+      - refs/tags/release-*
 
 pool:
   vmImage: 'ubuntu-latest'
